--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,5 +2,5 @@ app:
     resource: '@AppBundle/Controller/'
     type: annotation
 
-api_login_check:
-    path: /login_check
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
