--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,8 @@ imports:
     - { resource: services.yml }
     - { resource: lexik_jwt.yml }
     - { resource: nelmio_cors.yml }
+    - { resource: stof_doctrine_extension.yml }
+    - { resource: mysql.yml }
     - { resource: fos_user.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
