added endpoint to check if user with given phone number exists

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,6 +35,11 @@ security:
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
 
+        public:
+            methods: [GET]
+            pattern: ^/users/check/
+            security: false
+
         api:
             pattern:   ^/
             stateless: true
