deleted pusher integration

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -25,9 +25,4 @@ parameters:
     jwt_key_pass_phrase:  ''                                         # ssh key pass phrase
     jwt_token_ttl:        3600
 
-    #Push notification credentials
-    push_notifications_config:
-        app_id: "345998"
-        key: "b5aacd4973b629bb7366"
-        secret: "21e0ca5a8cce30c454aa"
-        cluster: "eu"
+    contis_api_host: http://34.253.132.188 
