creating account creaqte endpoint

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -19,5 +19,6 @@ services:
         tags:
             - { name: kernel.event_subscriber }
 
-    payproapi.http_client:
-        class: AppBundle\Service\GuzzleHttpClient
+imports:
+    - { resource: managers.yml }
+    - { resource: repositories.yml }
