--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "twilio/sdk": "^5.11"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
