--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "^2.0",
+        "giggsey/libphonenumber-for-php": "^8.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.4",
         "nelmio/cors-bundle": "^1.5",
