--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -9,9 +9,9 @@ services:
     payproapi.twilio_short_message_service:
         class: AppBundle\Service\TwilioShortMessageService
         arguments:
-            - '%twilio_account_id%'
-            - '%twilio_auth_token%'
-            - '%twilio_phone_number%'
+            - "%twilio_account_id%"
+            - "%twilio_auth_token%"
+            - "%twilio_phone_number%"
 imports:
     - { resource: managers.yml }
     - { resource: subscribers.yml }
