--- a/src/AppBundle/Resources/config/contis.yml
+++ b/src/AppBundle/Resources/config/contis.yml
@@ -2,12 +2,8 @@ services:
   payproapi.contis_request_service:
     class: AppBundle\Service\Contis\RequestService
     arguments:
-      - "%contis_hash_pan_key%"
+      - "@session"
       - "%contis_api_host%"
-
-  payproapi.contis_login_service:
-    class: AppBundle\Service\Contis\LoginService
-    arguments:
+      - "%contis_hash_pan_key%"
       - "%contis_username%"
       - "%contis_password%"
-      - "@payproapi.contis_request_service"
