created ContactController and started ContactManagerService

--- a/src/AppBundle/Resources/config/managers.yml
+++ b/src/AppBundle/Resources/config/managers.yml
@@ -12,3 +12,8 @@ services:
     arguments:
       - "@doctrine.orm.entity_manager"
       - "@event_dispatcher"
+
+  payproapi.contact_manager:
+    class: AppBundle\Service\EntityManager\ContactsManager
+    arguments:
+      - "@doctrine.orm.entity_manager"
