--- a/src/AppBundle/Resources/config/managers.yml
+++ b/src/AppBundle/Resources/config/managers.yml
@@ -5,9 +5,7 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Agreement')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Country')"
       - "@validator"
-      - "@payproapi.contis_request_service"
-      - "@payproapi.contis_authentication_service"
-      - "@payproapi.contis_hashing_service"
+      - "@contis_api_client.account_service"
     
   payproapi.create_mobile_verification_code_service:
     class: AppBundle\Service\MobileVerificationCode\CreateMobileVerificationCodeService
