--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -2,8 +2,7 @@ services:
   payproapi.registration_success_subscriber:
     class: UserBundle\EventSubscriber\RegistrationSuccessSubscriber
     arguments: 
-      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:MobileVerificationCode')"
-      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@payproapi.user_validator_service"
     tags:
       - { name: kernel.event_subscriber }
 
