--- a/src/AppBundle/Resources/config/account.yml
+++ b/src/AppBundle/Resources/config/account.yml
@@ -2,9 +2,19 @@ services:
   payproapi.create_account_service:
     class: AppBundle\Service\Account\CreateAccountService
     arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Agreement')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Country')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@validator"
+      - "@contis_api_client.account_service"
+
+  payproapi.update_account_service:
+    class: AppBundle\Service\Account\UpdateAccountService
+    arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Agreement')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Country')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@validator"
       - "@contis_api_client.account_service"
