--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -21,5 +21,6 @@ imports:
   - { resource: mobileVerificationCode.yml }
   - { resource: contact.yml }
   - { resource: user.yml }
+  - { resource: transaction.yml }
   - { resource: subscribers.yml }
   - { resource: contis.yml }
