--- a/src/AppBundle/Resources/config/transaction.yml
+++ b/src/AppBundle/Resources/config/transaction.yml
@@ -1,6 +1,8 @@
 services:
-  payproapi.transaction_index_service:
-    class: AppBundle\Service\Account\IndexTransactionService
+  payproapi.index_transaction_service:
+    class: AppBundle\Service\Transaction\IndexTransactionService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Transaction')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@contis_api_client.transaction_service"
