started account update

--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -1,6 +1,6 @@
 services:
-  payproapi.registration_success_subscriber:
-    class: UserBundle\EventSubscriber\RegistrationSuccessSubscriber
+  payproapi.registration_subscriber:
+    class: UserBundle\EventSubscriber\RegistrationSubscriber
     arguments: 
       - "@payproapi.user_validator_service"
     tags:
