--- a/src/AppBundle/Resources/config/contis.yml
+++ b/src/AppBundle/Resources/config/contis.yml
@@ -32,3 +32,10 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+
+  contis_api_client.card_service:
+    class: AppBundle\Service\ContisApiClient\Card
+    arguments:
+      - "@contis_api_client.request_service"
+      - "@contis_api_client.hashing_service"
+      - "@contis_api_client.authentication_service"
