--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,6 +7,7 @@ security:
  
     role_hierarchy:
         ROLE_CLIENT: ROLE_USER
+        ROLE_ADMIN: ROLE_CLIENT
  
     providers:
         fos_userbundle:
