added the account event subscriber, moving onto the create notification service.

--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -22,3 +22,8 @@ services:
     class: AppBundle\EventSubscriber\AuthenticationSubscriber
     tags:
       - { name: kernel.event_subscriber }
+
+  payproapi.account_subscriber:
+    class: AppBundle\EventSubscriber\AccountSubscriber
+    tags:
+      - { name: kernel.event_subscriber }
