--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -25,11 +25,12 @@ services:
 
 imports:
   - { resource: account.yml }
-  - { resource: mobileVerificationCode.yml }
-  - { resource: contact.yml }
   - { resource: accountRequest.yml }
-  - { resource: user.yml }
   - { resource: card.yml }
-  - { resource: transaction.yml }
-  - { resource: subscribers.yml }
+  - { resource: contact.yml }
   - { resource: contis.yml }
+  - { resource: mobileVerificationCode.yml }
+  - { resource: notification.yml }
+  - { resource: subscribers.yml }
+  - { resource: transaction.yml }
+  - { resource: user.yml }
