--- a/src/AppBundle/Resources/config/account.yml
+++ b/src/AppBundle/Resources/config/account.yml
@@ -8,6 +8,7 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@validator"
       - "@contis_api_client.account_service"
+      - "@event_dispatcher"
 
   payproapi.update_account_service:
     class: AppBundle\Service\Account\UpdateAccountService
