profile create and update done, and changed some issues with cards

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -30,6 +30,7 @@ imports:
   - { resource: accountRequest.yml }
   - { resource: user.yml }
   - { resource: card.yml }
+  - { resource: profile.yml }
   - { resource: transaction.yml }
   - { resource: subscribers.yml }
   - { resource: contis.yml }
