--- a/src/AppBundle/Resources/config/card.yml
+++ b/src/AppBundle/Resources/config/card.yml
@@ -6,3 +6,11 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Card')"
       - "@contis_api_client.card_service"
       - "@validator"
+
+  payproapi.activate_card_service:
+    class: AppBundle\Service\Card\ActivateCardService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Card')"
+      - "@contis_api_client.card_service"
+      - "@validator"
