--- a/src/AppBundle/Resources/config/notification.yml
+++ b/src/AppBundle/Resources/config/notification.yml
@@ -1,6 +1,6 @@
 services:
   payproapi.create_notification_service:
-    class: AppBundle\Service\Account\CreateNotificationService
+    class: AppBundle\Service\Notification\CreateNotificationService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Notification')"
