--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -25,5 +25,7 @@ services:
 
   payproapi.account_subscriber:
     class: AppBundle\EventSubscriber\AccountSubscriber
+    arguments:
+      - '@payproapi.create_notification_service'
     tags:
       - { name: kernel.event_subscriber }
