--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: lexik_jwt.yml }
     - { resource: nelmio_cors.yml }
     - { resource: fos_user.yml }
+    - { resource: rms_push_notifications.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
