--- a/src/AppBundle/Resources/config/cardHolder.yml
+++ b/src/AppBundle/Resources/config/cardHolder.yml
@@ -1,5 +1,5 @@
 services:
-  payproapi.validate_card_holder:
+  payproapi.card_holder_verification_service:
     class: AppBundle\Service\CardHolder\CardHolderVerificationService
     arguments:
       - "@contis_api_client.account_service"
