--- a/src/AppBundle/Resources/config/cardHolder.yml
+++ b/src/AppBundle/Resources/config/cardHolder.yml
@@ -2,5 +2,5 @@ services:
   payproapi.card_holder_verification_service:
     class: AppBundle\Service\CardHolder\CardHolderVerificationService
     arguments:
-      - "@contis_api_client.account_service"
+      - "@=service('contis_api_client.account_service')"
       - "@event_dispatcher"
