--- a/src/AppBundle/Resources/config/notification.yml
+++ b/src/AppBundle/Resources/config/notification.yml
@@ -6,7 +6,16 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Notification')"
       - "@validator"
 
+payproapi.update_notification_service:
+    class: AppBundle\Service\Notification\CreateNotificationService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Notification')"
+      - "@validator"
+
   payproapi.send_notification_service:
     class: AppBundle\Service\Notification\SendNotificationService
     arguments:
       - "@=service('rms_push_notifications')"
+      - "@=service('payproapi.update_notification_service')"
+      - "@event_dispatcher"
