--- a/src/AppBundle/Resources/config/card.yml
+++ b/src/AppBundle/Resources/config/card.yml
@@ -14,3 +14,11 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Card')"
       - "@contis_api_client.card_service"
       - "@validator"
+
+  payproapi.update_card_service:
+    class: AppBundle\Service\Card\UpdateCardService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Card')"
+      - "@contis_api_client.card_service"
+      - "@validator"
