added the message of the push notification with translation system

--- a/src/AppBundle/Resources/config/notification.yml
+++ b/src/AppBundle/Resources/config/notification.yml
@@ -17,6 +17,5 @@ services:
     class: AppBundle\Service\Notification\SendNotificationService
     arguments:
       - "@=service('rms_push_notifications')"
-      - "@=service('rms_push_notifications.ios.feedback')"
       - "@=service('payproapi.update_notification_service')"
-      - "@event_dispatcher"
+      - "@translator"
