started balance api client

--- a/src/AppBundle/Resources/config/contis.yml
+++ b/src/AppBundle/Resources/config/contis.yml
@@ -39,3 +39,10 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+
+  contis_api_client.balance_service:
+    class: AppBundle\Service\ContisApiClient\Balance
+    arguments:
+      - "@contis_api_client.request_service"
+      - "@contis_api_client.hashing_service"
+      - "@contis_api_client.authentication_service"
