--- a/src/AppBundle/Resources/config/accountRequest.yml
+++ b/src/AppBundle/Resources/config/accountRequest.yml
@@ -8,3 +8,12 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@validator"
       - "@payproapi.mailing_service"
+  payproapi.update_account_request_service:
+      class: AppBundle\Service\AccountRequest\UpdateAccountRequestService
+      arguments:
+        - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
+        - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Agreement')"
+        - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Country')"
+        - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+        - "@validator"
+        - "@payproapi.mailing_service"
