--- a/src/AppBundle/Resources/config/card.yml
+++ b/src/AppBundle/Resources/config/card.yml
@@ -15,6 +15,8 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Card')"
       - "@contis_api_client.card_service"
       - "@validator"
+      - "@event_dispatcher"
+      - "@logger"
 
   payproapi.update_card_service:
     class: AppBundle\Service\Card\UpdateCardService
