--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "twilio/sdk": "^5.11"
     },
     "require-dev": {
+        "phpunit/phpunit": "^6.2",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
