--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,9 @@
         "twilio/sdk": "^5.11"
     },
     "require-dev": {
+        "phploc/phploc": "^4.0",
         "phpunit/phpunit": "^6.2",
+        "sebastian/phpcpd": "^3.0",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
     },
