WIP:skeleton of transactions done

--- a/src/AppBundle/Resources/config/bitcoinWallet.yml
+++ b/src/AppBundle/Resources/config/bitcoinWallet.yml
@@ -8,3 +8,8 @@ services:
     class: AppBundle\Service\BitcoinWalletApiClient\Wallet
     arguments:
       - "@bitcoin_wallet_api_client.request_service"
+
+  bitcoin_wallet_api_client.transaction_service:
+      class: AppBundle\Service\BitcoinWalletApiClient\Transaction
+      arguments:
+        - "@bitcoin_wallet_api_client.request_service"
