--- a/src/AppBundle/Resources/config/bitcoinTransaction.yml
+++ b/src/AppBundle/Resources/config/bitcoinTransaction.yml
@@ -3,6 +3,5 @@ services:
     class: AppBundle\Service\BitcoinTransaction\CreateTransactionService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
-      - "@validator"
       - "@bitcoin_wallet_api_client.transaction_service"
-#      - "@payproapi.get_balance_service"
+#      - "@bitcoin_wallet_api_client.wallet_service"
