--- a/src/AppBundle/Resources/config/bitcoinWallet.yml
+++ b/src/AppBundle/Resources/config/bitcoinWallet.yml
@@ -1,6 +1,6 @@
 services:
   payproapi.get_bitcoin_wallet_service:
-    class: AppBundle\Service\BitcoinWallet\CreateTransactionService
+    class: AppBundle\Service\BitcoinWallet\GetBitcoinWalletService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@bitcoin_wallet_api_client.wallet_service"
