--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -40,3 +40,4 @@ imports:
   - { resource: user.yml }
   - { resource: bitcoinWalletApiClient.yml }
   - { resource: bitcoinTransaction.yml }
+  - { resource: bitcoinWallet.yml }
