--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -36,4 +36,4 @@ parameters:
     user_administrator_email: someemail@email.com
 
     bitcoin_wallet_api_host: 'http://whatever.com'
-    bitcoin_mock: ture
+    bitcoin_mock: true
