added env parameter for the docker compose path

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -37,3 +37,4 @@ parameters:
 
     bitcoin_wallet_api_host: 'http://whatever.com'
     bitcoin_mock: true
+    bitcoin_docker_compose_path: '/var/bitcoinWalletCLI/docker-compose.yml'
