--- a/src/AppBundle/Resources/config/bitcoinWalletApiClient.yml
+++ b/src/AppBundle/Resources/config/bitcoinWalletApiClient.yml
@@ -1,17 +1,15 @@
 services:
-  bitcoin_wallet_api_client.request_service:
-    class: AppBundle\Service\BitcoinWalletApiClient\RequestService
+  bitcoin_wallet_api_client.process_service:
+    class: AppBundle\Service\BitcoinWalletApiClient\BitcoreWalletProcessService
     arguments:
-      - "%bitcoin_wallet_api_host%"
+      - "%bitcoin_docker_compose_path%"
 
   bitcoin_wallet_api_client.wallet_service:
     class: AppBundle\Service\BitcoinWalletApiClient\Wallet
     arguments:
-      - "@bitcoin_wallet_api_client.request_service"
-      - "%bitcoin_docker_compose_path%"
+      - "@bitcoin_wallet_api_client.process_service"
 
   bitcoin_wallet_api_client.transaction_service:
     class: AppBundle\Service\BitcoinWalletApiClient\Transaction
     arguments:
-      - "@bitcoin_wallet_api_client.request_service"
-      - "%bitcoin_docker_compose_path%"
+      - "@bitcoin_wallet_api_client.process_service"
