added the testnet mode to the parameters.yml.dist and adapted the creation of wallets in order to take into consideration the net mode

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -37,4 +37,5 @@ parameters:
 
     bitcoin_wallet_api_host: 'http://whatever.com'
     bitcoin_mock: true
+    bitcoin_mode_testnet: true
     bitcoin_docker_compose_path: '/var/bitcoinWalletCLI/docker-compose.yml'
