--- a/src/AppBundle/Resources/config/contis.yml
+++ b/src/AppBundle/Resources/config/contis.yml
@@ -32,6 +32,7 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+      - "@logger"
 
   contis_api_client.card_service:
     class: AppBundle\Service\ContisApiClient\Card
@@ -39,6 +40,7 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+      - "@logger"
 
   contis_api_client.balance_service:
     class: AppBundle\Service\ContisApiClient\Balance
@@ -46,3 +48,4 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+      - "@logger"
