Add logger into contis call services, finished

--- a/src/AppBundle/Resources/config/contis.yml
+++ b/src/AppBundle/Resources/config/contis.yml
@@ -25,6 +25,7 @@ services:
       - "@contis_api_client.request_service"
       - "@contis_api_client.hashing_service"
       - "@contis_api_client.authentication_service"
+      - "@logger"
 
   contis_api_client.transaction_service:
     class: AppBundle\Service\ContisApiClient\Transaction
