--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -45,3 +45,14 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:Account')"
     tags:
       - { name: kernel.event_subscriber }
+
+  payproapi.user_login_manager:
+    class: 'AppBundle\EventSubscriber\LoginListener'
+    arguments: 
+       - '@fos_user.user_manager'
+       - '@logger'
+       - '@payproapi.get_balance_service'
+       - '@payproapi.get_bitcoin_wallet_service'
+    tags:
+     - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
+     - { name: monolog.logger, channel: app }
