--- a/src/AppBundle/Resources/config/bitcoinTransaction.yml
+++ b/src/AppBundle/Resources/config/bitcoinTransaction.yml
@@ -9,5 +9,20 @@ services:
   payproapi.index_bitcoin_transaction_service:
     class: AppBundle\Service\BitcoinTransaction\IndexBitcoinTransactionService
     arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinTransaction')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@payproapi.bitcoin_sync_transaction_service"
+
+  payproapi.bitcoin_sync_transaction_service:
+    class: AppBundle\Service\Transaction\BitcoinSyncTransactionService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinTransaction')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinAccount')"
       - "@bitcoin_wallet_api_client.transaction_service"
+
+  payproapi.last_transactions_service:
+    class: AppBundle\Service\Transaction\LastTransactionsService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinTransaction')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@payproapi.bitcoin_sync_transaction_service"
