bitcoinTransactions Sync implemented

--- a/src/AppBundle/Resources/config/bitcoinWalletApiClient.yml
+++ b/src/AppBundle/Resources/config/bitcoinWalletApiClient.yml
@@ -14,3 +14,7 @@ services:
     class: AppBundle\Service\BitcoinWalletApiClient\Transaction
     arguments:
       - "@bitcoin_wallet_api_client.process_service"
+      - "@bitcoin_wallet_api_client.hashing_service"
+
+  bitcoin_wallet_api_client.hashing_service:
+    class:  AppBundle\Service\BitcoinWalletApiClient\HashingService
