--- a/src/AppBundle/Resources/config/bitcoinTransaction.yml
+++ b/src/AppBundle/Resources/config/bitcoinTransaction.yml
@@ -14,14 +14,14 @@ services:
       - "@payproapi.bitcoin_sync_transaction_service"
 
   payproapi.bitcoin_sync_transaction_service:
-    class: AppBundle\Service\Transaction\BitcoinSyncTransactionService
+    class: AppBundle\Service\BitcoinTransaction\BitcoinSyncTransactionService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinTransaction')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinAccount')"
       - "@bitcoin_wallet_api_client.transaction_service"
 
-  payproapi.last_transactions_service:
-    class: AppBundle\Service\Transaction\LastTransactionsService
+  payproapi.bitcoin_last_transactions_service:
+    class: AppBundle\Service\BitcoinTransaction\LastTransactionsService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinTransaction')"
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
