--- a/src/AppBundle/Resources/config/account.yml
+++ b/src/AppBundle/Resources/config/account.yml
@@ -19,3 +19,9 @@ services:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
       - "@validator"
       - "@contis_api_client.account_service"
+  payproapi.create_bitcoin_account_service:
+    class: AppBundle\Service\BitcoinAccount\CreateAccountService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinAccount')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@validator"
