--- a/src/AppBundle/Resources/config/subscribers.yml
+++ b/src/AppBundle/Resources/config/subscribers.yml
@@ -4,6 +4,7 @@ services:
     arguments: 
       - "@payproapi.user_validator_service"
       - "@payproapi.create_bitcoin_account_service"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinAccount')"
       - "@bitcoin_wallet_api_client.wallet_service"
     tags:
       - { name: kernel.event_subscriber }
