Remove Contis to this branch

--- a/src/AppBundle/Resources/config/bitcoinWallet.yml
+++ b/src/AppBundle/Resources/config/bitcoinWallet.yml
@@ -1,4 +1,10 @@
 services:
+  payproapi.create_bitcoin_account_service:
+    class: AppBundle\Service\BitcoinAccount\CreateAccountService
+    arguments:
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:BitcoinAccount')"
+      - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:User')"
+      - "@validator"
   payproapi.get_bitcoin_wallet_service:
     class: AppBundle\Service\BitcoinWallet\GetBitcoinWalletService
     arguments:
