--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.2",
@@ -28,6 +28,7 @@
         "friendsofsymfony/user-bundle": "^2.0",
         "giggsey/libphonenumber-for-php": "^8.5",
         "guzzlehttp/guzzle": "^6.3",
+        "graze/guzzle-jsonrpc": "^3.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.4",
         "nelmio/cors-bundle": "^1.5",
