--- a/src/AppBundle/Resources/config/appVersion.yml
+++ b/src/AppBundle/Resources/config/appVersion.yml
@@ -3,3 +3,13 @@ services:
     class: AppBundle\Service\AppVersion\GetAllAppVersionsService
     arguments:
       - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
+
+  payproapi.app_version.get_android_service:
+    class: AppBundle\Service\AppVersion\GetAndroidAppVersionService
+    arguments:
+    - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
+
+  payproapi.app_version.get_ios_service:
+    class: AppBundle\Service\AppVersion\GetIOSAppVersionService
+    arguments:
+    - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
