--- a/src/AppBundle/Resources/config/appVersion.yml
+++ b/src/AppBundle/Resources/config/appVersion.yml
@@ -9,7 +9,17 @@ services:
     arguments:
     - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
 
+  payproapi.app_version.set_android_service:
+    class: AppBundle\Service\AppVersion\SetAndroidAppVersionService
+    arguments:
+    - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
+
   payproapi.app_version.get_ios_service:
     class: AppBundle\Service\AppVersion\GetIOSAppVersionService
+    arguments:
+    - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
+
+  payproapi.app_version.set_ios_service:
+    class: AppBundle\Service\AppVersion\SetIOSAppVersionService
     arguments:
     - "@=service('doctrine.orm.entity_manager').getRepository('AppBundle:AppVersion')"
